--- a/research/paper/figure/cy_vs_theta.tex
+++ b/research/paper/figure/cy_vs_theta.tex
@@ -16,6 +16,6 @@
         \put(0.565,1.01){(b)}
       \end{picture}
 
-  \caption{Lift coefficient, $C_y$ \JL{$C_y$ is upper case here, lower case on the figure. Make them match what is in the nomenclature}, as a function of incidence angle $\theta$, for a static square cross section. (a) Data from simulations at $Re=165$  (b) data from \cite{Parkinson1964} at $Re=22300$. Points ($\bullet$) are measurements from the simulations. The solid line is a 7th-order polynomial fit that has been used to calculate the right-hand side of equation 4 throughout this study}
+  \caption{Lift coefficient, $C_y$ \JL{$C_y$ is upper case here, lower case on the figure. Make them match what is in the nomenclature}, as a function of incidence angle $\theta$, for a static square cross section. (a) Data from simulations at $Re=165$  (b) data from \cite{Parkinson1964} at $Re=22300$. Points ($\bullet$) are measurements from the simulations. The solid lines in both plots are 7th-order interpolating polynomial used to predict the fluid forcing for the QSS model.}
     \label{fig:lift_curves}
 \end{figure}
