uploaded 4.22 local time

--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -19,7 +19,8 @@
 
  Using $U^*$ and $\zeta$ assumes that the system has a preferred frequency. The effect of fixing $\zeta$ and increasing $U^*$ actually decreases damping constant for a fixed free-stream velocity. ($U^*=\frac{U}{f \times D}$, $\zeta= \frac{c}{2 m \omega_n}$ ). Both these effects leads to the multiple lines that are horizontally transpose when $\zeta$ is increased (Fig.\ref{fig:uncollapsed_data} (e) and (f)). Therefore the effect of $\zeta$ essentially scales up the damping coefficient for a fixed $U^*$.
  
- A single set of results for a given $C_$ curve could be obtained for the displacement, velocity and power were plotted as a function of damping constant $c$ (Fig \ref{fig:collpased_data} (a),(b),(c) and (d)). Fig.\ref{fig:time_hostory_velocity_same_power} clearly shows that a similar velocity amplitude could be obtained for a given damping factor provided that the small fluctuations are disregarded. 
+ A single set of results for a given $C_y$ curve could be obtained for the displacement, velocity and power were plotted as a function of damping constant $c$ 
+(Fig \ref{fig:collpased_data} (a),(b),(c) and (d)). Fig.\ref{fig:time_hostory_velocity_same_power} clearly shows that a similar velocity amplitude could be obtained for a given damping factor provided that the small fluctuations are disregarded. 
  
   
 
