--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -1,11 +1,18 @@
 
 \section{Results}
+
+\subsection{Stationary data}
+
+The stationary $C_y$ data obtained using DNS simulations (Fig.\ref{cy ploynomial}(a))have a good agreement with data presented in \cite{Joly2012}. In comparison with the 7th order polynomial curve at \reynoldsnumber=22300 (Fig.\ref{cy ploynomial}(b))  several differences could be observed. The peak value of $C_y$ is  significantly lower at low  at \reynoldsnumber=165. The inflection point present at \reynoldsnumber=22300 could not be observed at \reynoldsnumber=165. This agrees with the findings of \cite{Luo2003}. It was concluded by \cite{Luo2003} that hysteresis occur due to the inflection point found in the $C_y$ curve. Therefore hysteresis is not expected at \reynoldsnumber=165. The range where $C_y$ remain positive is narrow at \reynoldsnumber=165 ($0^0-6^0$) compared to \reynoldsnumber=22300 ($0^0-15^0$). This is quite significant due to the fact that it will effect the direction of power transfer which will be explained in subsections later. Therefore due to the overall smaller $C_y$ and narrow range of angles where $C_y$ is positive for \reynoldsnumber=165 compared to \reynoldsnumber=22300 leads one to expect a lot less power at\reynoldsnumber=165 compared to \reynoldsnumber=2230.
+
+  
+
 \input{../figure/uncollapsed_data}
 
 \subsection{Displacement,velocity and power output as a function of reduced velocity}
 
 
- The quasi-steady analysis data reveals that the displacement amplitude tend to grow with increasing $U^*$ Fig.\ref{fig:uncollapsed_data} (a) and (b). The onset of galloping is delayed with increasing $\zeta$ for both high and low Reynolds numbers. This echo the findings of previous studies by \cite{Parkinson1964} and \cite{Barrero-Gil2010a}. Hysteresis could be observed at higher Reynolds numbers. 
+ The quasi-steady analysis data reveals that the displacement amplitude tend to grow with increasing $U^*$ Fig.\ref{fig:uncollapsed_data} (a) and (b). The onset of galloping is delayed with increasing $\zeta$ for both high and low Reynolds numbers. This echo the findings of previous studies by \cite{Parkinson1964} and \cite{Barrero-Gil2010a}. Hysteresis could be observed at higher Reynolds numbers.
 
  
  \subsubsection*{Power vs $U^*$}
